--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="../media/XDL-ICON-2.png"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="XOBO Delivery Limited (XDL) offers immediate pick and delivery services."/><title>XOBO - Simple · Fast · Reliable</title><script defer="defer" src="/static/js/main.d6c9d3e9.js"></script><link href="/static/css/main.ab0c0c66.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="../media/XDL-ICON-2.png" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="XOBO Delivery Limited (XDL) offers immediate pick and delivery services."
+    />
+    <title>XOBO - Simple · Fast · Reliable</title>
+    <script defer="defer" src="/static/js/main.d6c9d3e9.js"></script>
+    <link href="/static/css/main.ab0c0c66.css" rel="stylesheet" />
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
+</html>
