--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/XDL-ICON-2.png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" type="image/png" />
+    <link rel="icon" href="%PUBLIC_URL%/media/XDL-ICON-2.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/media/XDL-ICON-2.png" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/media/XDL-ICON-2.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
