--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" type="image/png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/media/XDL-ICON-2.png" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/media/XDL-ICON-2.png" type="image/png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, viewport-fit=cover" />
     <meta name="theme-color" content="#0ea5e9" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta
       name="description"
       content="XOBO Delivery Limited offers fast, reliable delivery services across Kenya. Express delivery, scheduled shipping, and business solutions with real-time tracking."
